--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/static/css/index.css" />
+    <script defer src="/static/app/index.js"></script>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h2>台北一日遊</h2>
+        <div class="page">
+          <button class="btn">預定行程</button>
+          <button class="btn">登入/註冊</button>
+        </div>
+      </nav>
+    </header>
+    <section class="hero">
+      <div class="content_outer_edge">
+        <div class="content">
+          <div class="slogan">
+            <h1>輕鬆享受台北一日悠閒</h1>
+            <p class="body-bold">探索每個角落，體驗城市的深度旅遊行程</p>
+          </div>
+          <div class="search">
+            <input
+              type="text"
+              name="attraction"
+              id="attraction"
+              class="body-bold"
+              placeholder="輸入景點名稱查詢"
+            />
+            <div class="btn_background">
+              <button class="btn search">
+                <img src="/static/images/icon_search.png" alt="搜尋" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <main>
+      <section class="list-bar">
+        <div class="arrow arrow-left">
+          <img
+            class="left-arrow"
+            src="/static/images/left arrow.png"
+            alt="左箭頭"
+          />
+        </div>
+        <div class="mrt-container">
+          <!-- <div class="mrt body-med">劍潭</div> -->
+        </div>
+        <div class="arrow arrow-right">
+          <img
+            class="right-arrow"
+            src="/static/images/right arrow.png"
+            alt="右箭頭"
+          />
+        </div>
+      </section>
+      <section class="attraction">
+        <!-- <div class="box-outer">
+          <div class="box">
+            <div class="img-container">
+              <img src="/static/images/麥可.jpg" alt="景點圖片" />
+            </div>
+            <div class="attraction-name body-bold">麥可</div>
+            <div class="attraction-info">
+              <div class="attraction-mrt">捷運站</div>
+              <div class="attraction-cat">景點分類</div>
+            </div>
+          </div>
+        </div> -->
+      </section>
+    </main>
+    <footer>
+      <p class="body-bold">COPYRIGHT © 2021 台北一日遊</p>
+    </footer>
+    <!-- popup menu-->
+    <div class="popup-background popup">
+      <div class="popup-block popup">
+        <div class="decorateor-bar"></div>
+        <div class="user-content">
+          <h3 class="signin bold">登入會員帳號</h3>
+          <h3 class="signup bold">註冊會員帳號</h3>
+          <input
+            type="text"
+            name="name"
+            class="name body-med signup"
+            placeholder="輸入姓名"
+          />
+          <input
+            type="text"
+            name="email"
+            class="email body-med"
+            placeholder="輸入電子信箱"
+          />
+          <input
+            type="password"
+            name="password"
+            class="password body-med"
+            placeholder="輸入密碼"
+          />
+          <button class="btn signin">登入帳戶</button>
+          <button class="btn signup">註冊新帳戶</button>
+          <p class="signin body-med">還沒有帳戶?點此註冊</p>
+          <p class="signup body-med">已經有帳戶了?點此登入</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
