finished attraction page, with RWD, fetch attraction data by attraction id, redirect to home page function, image fade in/out animation, the function of clicking image No. circles and arrow buttons to switch showing image.

--- a/static/index.html
+++ b/static/index.html
@@ -72,7 +72,8 @@
       </section>
       <section class="attraction">
         <!-- <div class="attraction__box--outer">
-          <div class="attraction__box">
+          <div class="attraction__box" id="1">
+            <div class="attraction__cover" id="1"></div>
             <div class="attraction__img">
               <img src="/static/images/麥可.jpg" alt="景點圖片" />
             </div>
@@ -123,4 +124,5 @@
       </div>
     </section>
   </body>
+  <script></script>
 </html>
