--- a/static/attraction.html
+++ b/static/attraction.html
@@ -26,22 +26,34 @@
     </header>
     <main>
       <section class="profile">
-        <div class="profile__image-box">
-          <img
-            class="profile__btn profile__btn--left"
-            src="./images/btn_leftArrow.png"
-            alt="左箭頭"
-          />
-          <img class="attraction" src="./images/麥可.jpg" alt="景點圖片" />
-          <img
-            class="profile__btn profile__btn--right"
-            src="./images/btn_rightArrow.png"
-            alt="右箭頭"
-          />
+        <div class="profile__image-box--outer">
+          <div class="profile__image-box">
+            <img
+              class="profile__arrow-btn profile__arrow-btn--left"
+              src="/static/images/btn_leftArrow.png"
+              alt="左箭頭"
+            />
+            <!-- <img
+              class="attraction"
+              src="./images/麥可.jpg"
+              alt="景點圖片"
+              style="z-index: auto; display: none"
+            /> -->
+            <img
+              class="profile__arrow-btn profile__arrow-btn--right"
+              src="/static/images/btn_rightArrow.png"
+              alt="右箭頭"
+            />
+            <div class="profile__imgNo"></div>
+          </div>
         </div>
         <div class="profile__content">
-          <h3>麥可</h3>
-          <p>分類 at 捷運站</p>
+          <h3 class="profile__content--name bold"></h3>
+          <div class="profile__content--cat-mrt body-med">
+            <span class="profile__content--cat"></span>
+
+            <span class="profile__content--mrt"></span>
+          </div>
           <div class="profile__content--form">
             <p class="form__title body-bold">訂購導覽行程</p>
             <p class="form__title form__title--slogan body-med">
@@ -54,19 +66,34 @@
             <div class="form__option form__option--time">
               <div class="form__option--time body-bold">選擇時間：</div>
               <label for="morning">
-                <input type="radio" id="morning" name="time" />
+                <input
+                  type="radio"
+                  id="morning"
+                  name="time"
+                  value="morning"
+                  checked
+                />
                 <div class="radio-btn"></div>
                 <span>上半天</span>
               </label>
               <label for="afternoon">
-                <input type="radio" id="afternoon" name="time" />
+                <input
+                  type="radio"
+                  id="afternoon"
+                  name="time"
+                  value="afternoon"
+                />
                 <div class="radio-btn"></div>
                 <span>下半天</span>
               </label>
             </div>
             <div class="form__option form__option--cost">
               <div class="form__option--cost-title body-bold">導覽費用：</div>
-              <div class="form__option--cost-price">新台幣 2000 元</div>
+              <div class="form__option--cost-price">
+                <span>新台幣&nbsp</span>
+                <span id="price">2000</span>
+                <span>&nbsp元</span>
+              </div>
             </div>
             <button class="form__btn regular">開始預約行程</button>
           </div>
@@ -74,18 +101,11 @@
       </section>
       <div class="separator"></div>
       <section class="info">
-        <span class="info__description">
-          麥可車禍：「麥可」陳宇風在劇中慘遭卡車撞飛畫面太過誇張、違反正常人應有的物理知識，成為日後網友惡搞本土劇的經典笑料（第45集播出）。
-          捏爆橘子：雷洪的「捏爆橘子」（北斗爆橘拳）一幕讓網友感覺太無厘頭，網路爭相後製而爆紅（第64集播出）。甚連同時段三立台灣台《家和萬事興》也有惡搞橋段。
-          珍奶顏射：飾演「金居福」的雷洪好心送給兒子珍奶，但兒子不領情的將珍奶顏射滿了他老臉，引發觀眾顛倒倫理、有誤導同齡觀眾視聽的非議（第66集播出）。
-        </span>
-        <div>景點地址</div>
-        <div>臺北市 大安區忠孝東路4段</div>
-        <div>交通方式</div>
-        <div>
-          捷運站名：忠孝復興站4號出口1.公車：204、212、212直、232、232副、262、262(區間)、278、299、521、605、605(副)、605(新台五線)、667、903、忠孝新幹線至頂好市場站
-          2.車位：太平洋崇光百貨地下停車場或市民大道附近地下停車場
-        </div>
+        <p class="info__description content-reg"></p>
+        <div class="info__title body-bold">景點地址：</div>
+        <p class="info__address content-reg"></p>
+        <div class="info__title body-bold">交通方式：</div>
+        <p class="info__traffic content-reg"></p>
       </section>
     </main>
     <footer>
