update send booking data to back-end

--- a/static/attraction.html
+++ b/static/attraction.html
@@ -61,7 +61,20 @@
             </p>
             <div class="form__option form__option--date">
               <div class="form__option--date body-bold">選擇日期：</div>
-              <input type="date" id="date" name="date" class="body-med" />
+              <input
+                type="date"
+                id="date"
+                name="date"
+                class="body-med"
+                required="required"
+              />
+            </div>
+            <div class="form__alert">
+              <img
+                src="/static/images/circle-exclamation-solid.svg"
+                alt="alert"
+              />
+              請選擇日期！
             </div>
             <div class="form__option form__option--time">
               <div class="form__option--time body-bold">選擇時間：</div>
