--- a/static/index.html
+++ b/static/index.html
@@ -13,14 +13,15 @@
     <link rel="stylesheet" href="/static/css/overall.css" />
     <link rel="stylesheet" href="/static/css/index.css" />
     <script defer src="/static/app/index.js"></script>
+    <script defer src="/static/app/user.js"></script>
   </head>
   <body>
     <header class="header">
       <nav class="header__nav">
         <h2 class="header__title">台北一日遊</h2>
         <div class="header__page">
-          <button class="header__btn">預定行程</button>
-          <button class="header__btn">登入/註冊</button>
+          <button class="header__btn header__btn--booking">預定行程</button>
+          <button class="header__btn header__btn--user">登入/註冊</button>
         </div>
       </nav>
     </header>
@@ -89,40 +90,6 @@
     <footer>
       <p class="body-bold">COPYRIGHT © 2021 台北一日遊</p>
     </footer>
-    <!-- popup menu-->
-    <section class="popup">
-      <div class="popup__background">
-        <div class="popup__form-block">
-          <div class="form-block__decorateor-bar"></div>
-          <div class="form-block__content">
-            <h3 class="signin bold">登入會員帳號</h3>
-            <h3 class="signup bold">註冊會員帳號</h3>
-            <input
-              type="text"
-              name="name"
-              class="name body-med signup"
-              placeholder="輸入姓名"
-            />
-            <input
-              type="text"
-              name="email"
-              class="email body-med"
-              placeholder="輸入電子信箱"
-            />
-            <input
-              type="password"
-              name="password"
-              class="password body-med"
-              placeholder="輸入密碼"
-            />
-            <button class="signin">登入帳戶</button>
-            <button class="signup">註冊新帳戶</button>
-            <p class="signin body-med">還沒有帳戶?點此註冊</p>
-            <p class="signup body-med">已經有帳戶了?點此登入</p>
-          </div>
-        </div>
-      </div>
-    </section>
   </body>
   <script></script>
 </html>
