optimize the logic of attraction images switch when arrow btn click by mod(餘數) concept

--- a/static/attraction.html
+++ b/static/attraction.html
@@ -33,6 +33,7 @@
               class="profile__arrow-btn profile__arrow-btn--left"
               src="/static/images/btn_leftArrow.png"
               alt="左箭頭"
+              id="left"
             />
             <!-- <img
               class="attraction"
@@ -44,6 +45,7 @@
               class="profile__arrow-btn profile__arrow-btn--right"
               src="/static/images/btn_rightArrow.png"
               alt="右箭頭"
+              id="right"
             />
             <div class="profile__imgNo">
               <!-- <label class="profile__imgNo--box ">
