--- a/static/booking.html
+++ b/static/booking.html
@@ -12,8 +12,8 @@
     />
     <link rel="stylesheet" href="/static/css/overall.css" />
     <link rel="stylesheet" href="/static/css/booking.css" />
-    <script defer src="/static/app/booking.js"></script>
-    <script defer src="/static/app/user.js"></script>
+    <script defer type="module" src="/static/app/booking.js"></script>
+    <script defer type="module" src="/static/app/user.js"></script>
   </head>
   <body>
     <header class="header">
@@ -29,41 +29,39 @@
       <section class="booking">
         <div class="booking__welcome btn-bold">
           您好，
-          <span>麥可</span>
-          ，帶預定的行程如下：
+          <span class="booking__username"></span>
+          ，待預定的行程如下：
         </div>
         <div class="booking__profile">
-          <div class="booking__profile--img">
-            <img src="./images/麥可.jpg" alt="景點圖片" />
+          <div class="booking__profile--img-container">
+            <img class="booking__profile--img" src="" alt="景點圖片" />
           </div>
           <div class="booking__profile--infor">
             <div class="booking__profile--title body-bold">
               台北一日遊：
-              <span class="infor__data--attraction-name">平安鐘</span>
+              <span class="infor__data--attraction-name"></span>
             </div>
             <div class="booking__profile--content">
               <span class="infor__subtitle body-bold">日期：</span>
-              <span class="infor__data infor__data--date body-med"
-                >2021-04-23</span
-              >
+              <span class="infor__data infor__data--date body-med"></span>
             </div>
             <div class="booking__profile--content">
               <span class="infor__subtitle body-bold">時間：</span>
               <span class="infor__data infor__data--time body-med"
-                >早上9點到下午4點</span
+                >早上&nbsp9&nbsp點到下午&nbsp4&nbsp點</span
               >
             </div>
             <div class="booking__profile--content">
               <span class="infor__subtitle body-bold">費用：</span>
-              <span class="infor__data infor__data--cost body-med"
-                >新台幣2000元</span
-              >
+              <span class="infor__data body-med">
+                <span class="body-med">新台幣&nbsp</span>
+                <span class="body-med infor__data--cost"></span>
+                <span class="body-med">&nbsp元</span>
+              </span>
             </div>
             <div class="booking__profile--content">
               <span class="infor__subtitle body-bold">地點：</span>
-              <span class="infor__data infor__data--address body-med"
-                >台北市大安區之類的</span
-              >
+              <span class="infor__data infor__data--address body-med"></span>
             </div>
             <img
               src="/static/images/delete.png"
@@ -86,6 +84,7 @@
               id="name"
               class="contact__input--name body-med"
               placeholder="Yakko"
+              required
             />
           </div>
 
@@ -98,6 +97,7 @@
               id="email"
               class="contact__input--email body-med"
               placeholder="wehelp@pada-x.com"
+              required
             />
           </div>
 
@@ -109,7 +109,7 @@
               type="tel"
               id="phone"
               class="contact__input--phone body-med"
-              placeholder="0912345678"
+              required
             />
           </div>
           <div class="contact__notice body-bold">
@@ -128,6 +128,7 @@
               id="card-number"
               class="payment__input--car-number body-med"
               placeholder="**** **** **** ****"
+              required
             />
           </div>
 
@@ -140,6 +141,7 @@
               id="card-expire"
               class="payment__input--expire body-med"
               placeholder="MM / YY"
+              required
             />
           </div>
 
@@ -152,6 +154,7 @@
               id="card-CVV"
               class="payment__input--CVV body-med"
               placeholder="CVV"
+              required
             />
           </div>
         </section>
