--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/static/css/overall.css" />
     <link rel="stylesheet" href="/static/css/index.css" />
     <script defer src="/static/app/index.js"></script>
-    <script defer src="/static/app/user.js"></script>
+    <script defer type="module" src="/static/app/user.js"></script>
   </head>
   <body>
     <header class="header">
