finished first version of booking page front end without the function of sending order and pay

--- a/static/booking.html
+++ b/static/booking.html
@@ -25,13 +25,20 @@
         </div>
       </nav>
     </header>
+    <section class="welcome btn-bold">
+      <div class="welcome__container">
+        <span>您好，</span>
+        <span class="welcome__username">麥可麥可麥可麥可麥可</span>
+        <span>，待預定的行程如下：</span>
+      </div>
+    </section>
+
+    <section class="empty">
+      <div class="empty__state body-med">目前沒有任何預定行程</div>
+    </section>
+
     <main>
       <section class="booking">
-        <div class="booking__welcome btn-bold">
-          您好，
-          <span class="booking__username"></span>
-          ，待預定的行程如下：
-        </div>
         <div class="booking__profile">
           <div class="booking__profile--img-container">
             <img class="booking__profile--img" src="" alt="景點圖片" />
@@ -160,10 +167,10 @@
         </section>
         <div class="separator"></div>
         <section class="confirm">
-          <div class="confirm__total-price body-bold">
-            總價：新台幣&nbsp
-            <span>2000</span>
-            &nbsp元
+          <div class="confirm__total body-bold">
+            <span>總價：新台幣&nbsp</span>
+            <span class="confirm__total--cost">2000</span>
+            <span>&nbsp元</span>
           </div>
           <button class="confirm__btn btn-reg">確認訂購並付款</button>
         </section>
