correct the event execution to fit format

--- a/static/booking.html
+++ b/static/booking.html
@@ -61,9 +61,9 @@
             <div class="booking__profile--content">
               <span class="infor__subtitle body-bold">費用：</span>
               <span class="infor__data body-med">
-                <span class="body-med">新台幣&nbsp</span>
-                <span class="body-med infor__data--cost"></span>
-                <span class="body-med">&nbsp元</span>
+                <span class="body-med infor__data">新台幣</span>
+                <span class="body-med infor__data--cost infor__data"></span>
+                <span class="body-med infor__data">元</span>
               </span>
             </div>
             <div class="booking__profile--content">
