--- a/static/attraction.html
+++ b/static/attraction.html
@@ -12,8 +12,8 @@
     />
     <link rel="stylesheet" href="/static/css/overall.css" />
     <link rel="stylesheet" href="/static/css/attraction.css" />
-    <script defer src="/static/app/attraction.js"></script>
     <script defer type="module" src="/static/app/user.js"></script>
+    <script defer type="module" src="/static/app/attraction.js"></script>
   </head>
   <body>
     <header class="header">
