--- a/static/booking.html
+++ b/static/booking.html
@@ -28,7 +28,7 @@
     <section class="welcome btn-bold">
       <div class="welcome__container">
         <span>您好，</span>
-        <span class="welcome__username">麥可麥可麥可麥可麥可</span>
+        <span class="welcome__username"></span>
         <span>，待預定的行程如下：</span>
       </div>
     </section>
@@ -54,9 +54,7 @@
             </div>
             <div class="booking__profile--content">
               <span class="infor__subtitle body-bold">時間：</span>
-              <span class="infor__data infor__data--time body-med"
-                >早上&nbsp9&nbsp點到下午&nbsp4&nbsp點</span
-              >
+              <span class="infor__data infor__data--time body-med"></span>
             </div>
             <div class="booking__profile--content">
               <span class="infor__subtitle body-bold">費用：</span>
@@ -169,7 +167,7 @@
         <section class="confirm">
           <div class="confirm__total body-bold">
             <span>總價：新台幣&nbsp</span>
-            <span class="confirm__total--cost">2000</span>
+            <span class="confirm__total--cost"></span>
             <span>&nbsp元</span>
           </div>
           <button class="confirm__btn btn-reg">確認訂購並付款</button>
